# model-test

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py  main.py  schemas.py  state.py
backend/app/routers/: debug.py  documents.py  models_router.py  pipeline.py  runs.py  test_suite.py
backend/app/services/: bm25_store.py  document_processor.py  evaluator.py  llm_clients.py  test_runner.py  vector_store.py
backend/data/: default_questions.json
docs/: embedding-metrics.md  openrouter-integration.md  rag-performance-guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.tsx
frontend/src/components/common/: LoadingSpinner.tsx  ModelBadge.tsx  ScoreBar.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  DocumentsPage.tsx  EmbeddingEvalPage.tsx  PipelinePage.tsx  ResultDetailPage.tsx  ResultsPage.tsx  RunTestPage.tsx  SetupPage.tsx  TestSuitePage.tsx
frontend/src/types/: index.ts
